@@ -246,7 +246,9 @@ List interfaces currently in the database. If
 .I mode
 is not defined or is set to 0 then the output will use a one line verbose format. If
 .I mode
-is set to 1 then the output will contain one interface per line. See also
+is set to 1 then the output will contain one interface per line and if
+.I mode
+is set to 2 then only the interface count will be shown as a single number. See also
 .BR "--iflist" .
 
 .TP
@@ -329,7 +331,9 @@ List currently available interfaces. If
 .I mode
 is not defined or is set to 0 then the output will use a one line verbose format. If
 .I mode
-is set to 1 then the output will contain one interface per line. See also
+is set to 1 then the output will contain one interface per line and if
+.I mode
+is set to 2 then only the interface count will be shown as a single number. See also
 .BR "--dbiflist" .
 
 .TP
