@@ -31,8 +31,8 @@ void handleshowdata(PARAMS *p);
 void showoneinterface(PARAMS *p);
 void handletrafficmeters(PARAMS *p);
 void handleifselection(PARAMS *p);
-void showiflist(const int parseable);
-void showdbiflist(const int parseable);
+void showiflist(const int mode);
+void showdbiflist(const int mode);
 void validateinterface(PARAMS *p);
 
 #endif
